Add load more button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
           </form>
         </div>
       </div>
-      <div class="loader"></div>
+      <div class="loader-wrapper">
+        <div class="loader"></div>
+      </div>
     </header>
 
 <!-- =========================== photo grid ===================== -->
@@ -32,6 +34,7 @@
       <h1 class="screen-reader">Instagram photos</h1>
       <ul class="photos"></ul>
       <p class="error-message"></p>
+      <button class="load-more">Load More</button>
     </section>
 
 <!-- =========================== footer grid ===================== -->
