Style load more button

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       <h1 class="screen-reader">Instagram photos</h1>
       <ul class="photos"></ul>
       <p class="error-message"></p>
-      <button class="load-more">Load More</button>
+      <div class="button-wrapper">
+        <button class="load-more">Load More</button>
+      </div>
     </section>
-
-  
 
 <!-- =========================== footer grid ===================== -->
 
